--- a/quiz/index.html
+++ b/quiz/index.html
@@ -27,17 +27,17 @@
               <p id="choice0">jeu de calcul</p>
             </button>
         </a>
-        <a href="quiz.html">
+        <a href="QCM.html">
             <button id="guess1" class="btn">
               <p id="choice1">QCM</p>
             </button>
         </a>
-        <a href="trouveMots.html">
+        <a href="trouveDescriptionImage.html">
             <button id="guess2" class="btn">
               <p id="choice2">1 image/ 5 mots</p>
             </button>
         </a>
-        <a href="texteATrou.html">
+        <a href="texteComprehension.html">
             <button id="guess3" class="btn">
               <p id="choice3">texte à trou</p>
             </button>
@@ -47,7 +47,7 @@
     </div>
   </div>
    
-  <script src="./scriptMain.js" type="text/javascript" ></script>
+  <!--<script src="./scriptMain.js" type="text/javascript" ></script>-->
 </body>
 
 
