--- a/quiz/texteComprehension.html
+++ b/quiz/texteComprehension.html
@@ -15,7 +15,9 @@
 
   <div class="container">
     <div id="quiz">
-      <h1><span>Q</span>uiz <i class="far fa-question-circle"></i></h1>
+       <a href="index.html">
+        <h1><span>Q</span>uiz <i class="far fa-question-circle"></i></h1>
+        </a>
 
       <h2 id="question"></h2>
         
