--- a/quiz/jeuDeCalcul.html
+++ b/quiz/jeuDeCalcul.html
@@ -20,7 +20,7 @@
       </a>
       <h1 id="score">0</h1>
       <h2 id="question"></h2>
-      <form>
+      <form id="formulaire" onsubmit="return false">
         <input type="text" id="resultatBarre" name="resultat" autocomplete="off">
         <input type="button" id="bouton" value="Valider">
       </form>
