--- a/quiz/niveau_comprehension.html
+++ b/quiz/niveau_comprehension.html
@@ -15,7 +15,7 @@
 
   <div class="container">
     <div id="quiz">
-      <a href="../index.html">
+      <a href="./index.html">
         <h1><span>Q</span>uiz <i class="far fa-question-circle"></i></h1>
       </a>
 
