--- a/quiz/quizAideDomicile.html
+++ b/quiz/quizAideDomicile.html
@@ -8,14 +8,14 @@
     <title>Quiz - QCM</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
 <div class="container">
     <div id="quiz">
 
-        <a href="../index.html">
+        <a href="./index.html">
             <h1><span>Q</span>uiz <i class="far fa-question-circle"></i></h1>
         </a>
 
@@ -44,7 +44,7 @@
     </div>
 </div>
 
-<script src="../js/quizAideDomicile.js" type="text/javascript" ></script>
+<script src="./js/quizAideDomicile.js" type="text/javascript" ></script>
 </body>
 
 
