--- a/quiz/score.html
+++ b/quiz/score.html
@@ -14,7 +14,7 @@
 
     <body>
         <div class="container">
-            <a href="../index.html">
+            <a href="./index.html">
                 <h1><span>Q</span>uiz <i class="far fa-question-circle"></i></h1>
             </a>
             <!-- balise affichage du nom de l'utilisateur-->
@@ -23,6 +23,6 @@
             <table id="table" class="table table-striped ">
             </table>
         </div>
-        <script src="../js/scriptScore.js" type="text/javascript" ></script>
+        <script src="./js/scriptScore.js" type="text/javascript" ></script>
     </body>
 </html>
