--- a/quiz/score.html
+++ b/quiz/score.html
@@ -20,7 +20,7 @@
             <!-- balise affichage du nom de l'utilisateur-->
             <h3 id="nom"></h3>
             <!-- tableauf affichage des resultats-->
-            <table id="table" class="table table-striped ">
+            <table id="table" class="table table-striped table-bordered ">
             </table>
         </div>
         <script src="./js/scriptScore.js" type="text/javascript" ></script>
